# panopticon

./: Cargo.toml  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: main.rs  memory.rs
kernel/src/.cargo/: config.toml
kernel/src/allocator/: mod.rs  sleb.rs
kernel/src/fs/ext2/: mod.rs
kernel/src/klib/: idt.rs  mod.rs  once_lock.rs  util.rs  vga_console.rs
kernel/src/klib/acpi/: fadt.rs  mod.rs  rsdp.rs  xsdt.rs
kernel/src/klib/ahci/: ahcistate.rs  mod.rs
kernel/src/klib/graphics/: framebuffer.rs
kernel/src/klib/pci/: ide_controller.rs  mod.rs  pcistate.rs
kernel/src/klib/ps2/: keyboard.rs
kernel/src/klib/x86_64/: mod.rs  pagetable.rs
src/: main.rs
src/klib/: idt.rs  mod.rs  pic.rs  vga_console.rs  x86_64.rs
src/klib/containers/: circular_buffer.rs
src/klib/graphics/: framebuffer.rs
src/klib/ps2/: controller.rs  keyboard.rs  mod.rs
