[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
bootloader_api = "0.11"
volatile = "0.2.6"
x86_64 = "0.14.11"

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = ["size_20", "regular", "unicode-basic-latin"]

[dependencies.spin]
version = "0.9.8"
features = ["once"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
